Fixed issue with shrinking avatars on mobile

--- a/src/components/Blog/PostMetaData/index.module.scss
+++ b/src/components/Blog/PostMetaData/index.module.scss
@@ -8,6 +8,7 @@
     margin-right: 1.5rem;
     height: 80px;
     width: 80px;
+    flex-shrink: 0;
 }
 
 .avatarPlaceholder {
